# ai-agent-reliability-platform

./: .env.example  .gitignore  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_enterprise_schema.py
docker/: Dockerfile
docs/: architecture.md  usage.md
docs/demo-dataset/: support_qa.json
frontend/: .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: agents.ts  analytics.ts  auth.ts  client.ts  evaluations.ts  executions.ts  failures.ts
frontend/src/hooks/: useApi.ts
frontend/src/stores/: authStore.ts  orgStore.ts
frontend/src/types/: api.ts
infrastructure/docker/: init-db.sql
infrastructure/helm/ai-agent-platform/: .helmignore  Chart.yaml  README.md  values-dev.yaml  values-prod.yaml  values.yaml
infrastructure/kubernetes/base/: api-deployment.yaml  configmap.yaml  ingress.yaml  namespace.yaml  ollama-deployment.yaml  secrets.yaml
infrastructure/monitoring/prometheus/: prometheus.yml
scripts/: deploy-minikube.sh  migrate.sh  run_dev.sh  seed_demo.py
src/application/dtos/: __init__.py  agent_dto.py  health_check_dto.py  run_dto.py
src/domain/entities/: __init__.py  agent.py  agent_run.py  agent_version.py  api_key.py  dataset.py  evaluation.py  execution.py  experiment.py  health_check.py  organization.py  trace.py  user.py
src/domain/events/: __init__.py  domain_events.py
src/domain/exceptions/: __init__.py  domain_exceptions.py
src/domain/value_objects/: __init__.py  agent_status.py  agent_type.py  evaluation_enums.py  execution_enums.py  health_status.py  run_status.py  user_role.py
src/infrastructure/ai/: clustering.py  cost_calculator.py  failure_classifier.py  hallucination.py  providers.py
src/infrastructure/cache/: redis_client.py
src/infrastructure/config/: settings.py
src/infrastructure/database/: connection.py
src/infrastructure/observability/: logging.py  otel.py
src/infrastructure/queue/: celery_app.py
src/infrastructure/security/: audit_service.py  jwt_service.py  password_service.py
src/presentation/: main.py
src/presentation/api/: auth_dependencies.py  dependencies.py
src/presentation/schemas/: __init__.py  agent_schemas.py  health_check_schemas.py  run_schemas.py
tests/: conftest.py
tests/unit/application/: test_assign_clusters.py  test_clustering.py  test_cost_calculator.py  test_create_agent.py  test_execution_lifecycle.py  test_failure_classifier.py  test_ground_truth_evaluator.py  test_hallucination_signals.py  (+4 more)
(+127 files in other folders)
